Logo and Company Name position fix on tablet

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1642,6 +1642,8 @@ select::-ms-expand {
 
     .companyheader {
       width:90%;
+      z-index: 1000;
+      position: relative;
     }
 
     .widget.extendednavigation .bk-overlay {
